--- a/style.css
+++ b/style.css
@@ -1,22 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 :root{
     font-size: 62.5%;
-    font-family: sans-serifs;
-    --color-primary: #274C77;
-    --color-secondary: #6096BA;
-    --color-gray-01: #E7ECEF;
+    --bg-color: #6887A2;
+    --bg-color-card: #FAFAFA;
+    --color-title: #27333F;
 }
 
 body{
-    background-color: #e7e6e6;
+    background-color: var(--bg-color);
 }
 
 .container{
@@ -26,75 +25,91 @@ body{
 }
 
 .card{
-    background-color: #FFFFFF;
+    background-color: var(--bg-color-card);
+    margin: auto 1rem;
     border-radius: .8rem;
-    display: flex;
-    justify-content: space-between;
-    margin: 4rem;
-    width: 80%;
+    padding: 2rem;
+    max-width: 1100px;
 }
 
-.card img{
-    width: 45%;
-    padding: 2rem;
-}
-
-section{
-    width: 50%;
-    padding: 2rem;
+.card h1, p{
     text-align: center;
 }
 
-h1{
-    font-weight: 700;
-    font-size: 3rem;
-    color: var(--color-primary);
+.card h1{
+    color: var(--color-title);
+    font-size: clamp(2rem, 3vw, 4rem);
 }
 
-p{
-    font-size: 1.5rem;
+header p{
+    color: var(--color-title);
+    line-height: 1.5rem;
     margin-top: 1rem;
-    line-height: 3rem;
-    color: #525252;
+    font-size: clamp(1rem, 1.2vw, 1.3rem);
 }
 
 form{
+    text-align: left;
+    margin: 1rem auto;
     display: flex;
     flex-direction: column;
-    text-align: left;
-    gap: 2rem;
-    width: 50%;
-    margin: 2rem auto;
+    gap: 1rem;
+    max-width: 70%;
 }
-
-.input-wrapper label{
-    font-size: 1.5rem;
-    color: var(--color-primary);
-    font-weight: 700; 
+.input-wrapper{
+    display: flex;
+    margin: auto;
+    flex-direction: column;
+    width: 70%;
 }
 
 .input-wrapper input{
-    width: 100%;
     height: 4rem;
-    background:var(--color-gray-01);
-    border-radius: .6rem;
-    font-size: 1.5rem;
-    padding-left: 1rem;
-    border: none;
-    margin-top: .5rem;
+    border-radius: 8px;
+    border: 1.5px solid var(--color-title);
+    font-size: 2rem;
 }
+
 button{
-    height: 4rem;
-    background-color: var(--color-secondary);
+    width: 50%;
+    margin: auto;
+    background-color: var(--color-title);
     color: #FFFFFF;
     border: none;
-    font-size: 1.5rem;
-    border-radius: .6rem;
-    font-weight: 700;
+    padding: 1rem 1.5rem;
+    border-radius: 10rem;
 }
 
 button:hover{
     cursor: pointer;
-    transition: .5s;
-    background-color: var(--color-primary);
+    opacity: 0.8;
+    transition: 0.3s;
+}
+
+section span{
+    color: var(--color-title);
+    font-size: 6rem;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+}
+
+section p{
+    color: var(--color-title);
+    font-size: 1.5rem;
+}
+
+@media (min-width: 768px){
+    .card{
+        display: flex;
+        gap: 1rem;
+    }
+
+    .card main{
+        width: 60%;
+    }
+
+    section{
+        margin: auto;
+    }
 }
